# server

./: .env.example  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  SECURITY_MODEL.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
app/: auth.py  config.py  database.py  main.py  models.py
app/routes/: auth.py  sync.py
app/ws/: sync.py
