[project]
name = "termsh-server"
version = "0.0.0"
description = "termsh zero-knowledge sync API"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0"
authors = [{ name = "termsh contributors" }]

[project.urls]
Homepage = "https://termsh.co"
Repository = "https://github.com/termsh-co/server"
License = "https://www.gnu.org/licenses/agpl-3.0.html"
